<LinearLayout
    xmlns:adroid="http://schemas.android.com/apk/res/android"
     adroid:layout_width="match_parent"
    adroid:layout_height="match_parent"
    adroid:orientation="vertical"
    adroid:gravity="center"
    >

    <LinearLayout
        adroid:layout_width="wrap_content"
        adroid:layout_height="wrap_content"
        adroid:orientation="horizontal"
        >

        <Button
            adroid:id="@+id/btn_1"
            adroid:background="@drawable/radius"
            adroid:layout_width="70dp"
            adroid:layout_height="70dp"
            adroid:layout_marginLeft="15dp"
            adroid:layout_marginRight="15dp"
            adroid:layout_marginBottom="10dp"
            adroid:text="@string/key1_sec"

            />

        <Button
            adroid:id="@+id/btn_2"
            adroid:background="@drawable/radius"
            adroid:layout_width="70dp"
            adroid:layout_height="70dp"
            adroid:layout_marginLeft="15dp"
            adroid:layout_marginRight="15dp"
            adroid:text="@string/key2_sec"

            />

        <Button
            adroid:id="@+id/btn_3"
            adroid:background="@drawable/radius"
            adroid:layout_width="70dp"
            adroid:layout_height="70dp"
            adroid:layout_marginLeft="15dp"
            adroid:layout_marginRight="15dp"
            adroid:layout_marginBottom="10dp"
            adroid:text="@string/key3_sec"

            />
    </LinearLayout>


    <LinearLayout
        adroid:layout_width="wrap_content"
        adroid:layout_height="wrap_content"
        adroid:orientation="horizontal"
        >

        <Button
            adroid:id="@+id/btn_4"
            adroid:background="@drawable/radius"
            adroid:layout_width="70dp"
            adroid:layout_height="70dp"
            adroid:layout_marginLeft="15dp"
            adroid:layout_marginRight="15dp"
            adroid:layout_marginBottom="10dp"
            adroid:text="@string/key4_sec"
            />

        <Button
            adroid:id="@+id/btn_5"
            adroid:background="@drawable/radius"
            adroid:layout_width="70dp"
            adroid:layout_height="70dp"
            adroid:layout_marginLeft="15dp"
            adroid:layout_marginRight="15dp"
            adroid:layout_marginBottom="10dp"
            adroid:text="@string/key5_sec"
            />

        <Button
            adroid:id="@+id/btn_6"
            adroid:background="@drawable/radius"
            adroid:layout_width="70dp"
            adroid:layout_height="70dp"
            adroid:layout_marginLeft="15dp"
            adroid:layout_marginRight="15dp"
            adroid:layout_marginBottom="10dp"
            adroid:text="@string/key6_sec"
            />
    </LinearLayout>


    <LinearLayout
        adroid:layout_width="wrap_content"
        adroid:layout_height="wrap_content"
        adroid:orientation="horizontal"

        >

        <Button
            adroid:id="@+id/btn_7"
            adroid:background="@drawable/radius"
            adroid:layout_width="70dp"
            adroid:layout_height="70dp"
            adroid:layout_marginLeft="15dp"
            adroid:layout_marginRight="15dp"
            adroid:layout_marginBottom="10dp"
            adroid:text="@string/key7_sec"
            />

        <Button
            adroid:id="@+id/btn_8"
            adroid:background="@drawable/radius"
            adroid:layout_width="70dp"
            adroid:layout_height="70dp"
            adroid:layout_marginLeft="15dp"
            adroid:layout_marginRight="15dp"
            adroid:layout_marginBottom="10dp"
            adroid:text="@string/key8_sec"
            />

        <Button
            adroid:id="@+id/btn_9"
            adroid:background="@drawable/radius"
            adroid:layout_width="70dp"
            adroid:layout_height="70dp"
            adroid:layout_marginLeft="15dp"
            adroid:layout_marginRight="15dp"
            adroid:layout_marginBottom="10dp"
            adroid:text="@string/key9_sec"
            />
    </LinearLayout>

    <LinearLayout
        adroid:layout_width="wrap_content"
        adroid:layout_height="wrap_content"
        adroid:orientation="horizontal"
        >
        <Button
            adroid:background="@drawable/radius"
            adroid:layout_width="70dp"
            adroid:layout_height="70dp"
            adroid:layout_marginLeft="15dp"
            adroid:layout_marginRight="15dp"
            adroid:layout_marginBottom="10dp"
            adroid:visibility="invisible"
            />

        <Button
            adroid:id="@+id/btn_0"
            adroid:background="@drawable/radius"
            adroid:layout_width="70dp"
            adroid:layout_height="70dp"
            adroid:layout_marginLeft="15dp"
            adroid:layout_marginRight="15dp"
            adroid:layout_marginBottom="10dp"
            adroid:text="@string/key0_sec"
            />

        <Button
            adroid:id="@+id/btn_cancel"
            adroid:background="@null"
            adroid:layout_width="70dp"
            adroid:layout_height="70dp"
            adroid:layout_marginLeft="15dp"
            adroid:layout_marginRight="15dp"
            adroid:layout_marginBottom="10dp"
            adroid:text="@string/cancel_sec"
            adroid:textSize="14sp"
            />
    </LinearLayout>



    <TextView
        adroid:id="@+id/findPassword_security"
        adroid:layout_marginTop="10dp"
        adroid:layout_width="wrap_content"
        adroid:layout_height="wrap_content"
        adroid:textColor="@color/blue"
        adroid:text="@string/findPassword_sec"/>

</LinearLayout>