<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#11ffffff">

    <LinearLayout
        android:layout_width="280dp"
        android:layout_height="wrap_content"
        android:background="@drawable/shape_dialog"
        android:orientation="vertical"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:weightSum="1">

        <TextView
            android:id="@+id/title_dialog"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="15dp"
            android:gravity="center"
            android:text="@string/msg"
            android:textColor="#38ADFF"
            android:textSize="16sp" />

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/img_dialog"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_gravity="center_horizontal"
            android:layout_margin="5dp"
            android:src="@drawable/pic_head"
            />

        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:layout_marginTop="15dp"
            android:background="#E4E4E4" />

        <EditText
            android:id="@+id/edit_dialog"
            android:background="@null"
            android:textColor="@color/black"
            android:layout_width="232dp"
            android:layout_weight="0.19"
            android:layout_height="20dp"
            android:layout_margin="20dp"
            android:gravity="center_horizontal"
            android:maxLength="20"
            android:hint=""
            android:lines="1" />



         <View
             android:layout_width="match_parent"
             android:layout_height="1px"
             android:layout_marginTop="15dp"
             android:background="#E4E4E4" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:orientation="horizontal"
            android:layout_marginTop="20dp"
            >

            <Button
                android:id="@+id/no_dialog"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="10dp"
                android:layout_weight="1"
                android:background="@null"
                android:gravity="center"
                android:text="@string/no_btn"
                android:textColor="#7D7D7D"
                android:textSize="16sp" />

            <View
                android:layout_width="1px"
                android:layout_height="match_parent"
                android:background="#E4E4E4" />

            <Button
                android:id="@+id/yes_dialog"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginRight="10dp"
                android:layout_weight="1"
                android:background="@null"
                android:gravity="center"

                android:text="@string/yes_btn"
                android:textColor="#38ADFF"
                android:textSize="16sp" />
        </LinearLayout>

        </LinearLayout>


</RelativeLayout>